# tapestryoflegends

./: .replit  Dockerfile  UNIFIED_DEPLOYMENT_GUIDE.md  aliases_export.csv  aliases_safe_export.csv  app.py  bot-only-unified.yml  bot_documentation_export.json  database.py  deploy_requirements.txt  docker_import.py  export_summary.json  guilds_safe_export.csv  import_bot_documentation.py  main.py  models.py  multi-app-deployment-clean.tar  permissions_safe_export.csv  pyproject.toml  run.py  safe_import_migration.py  shared_groups_safe_export.csv  stats_safe_export.csv  unified-docker-compose.yml
bot/: __init__.py  achievement_commands.py  achievement_system.py  alias_commands.py  alias_manager.py  character_creation_modals.py  commands.py  edit_modals.py  guild_member_cache.py  modals.py  reward_calculator.py  session_manager.py  session_setup_view.py  stats_commands.py  stats_system.py  views.py
nginx/: nginx-multi-domain.conf
nginx-conf/: default.conf
web/: __init__.py  auth.py  object_storage.py  routes.py
web/templates/: aliases.html  base.html  bulk_manage.html  dashboard.html  error.html  group_manager.html  login.html  shared_groups.html  simple_login.html
web/templates/admin/: dashboard.html
